# COR-ID_api

./: .gitignore  Dockerfile  Dockerfile.modbus_worker  Dockerfile.scanner_worker  README.md  corid_env.development  corid_env.production  docker-compose.yml  entrypoint.sh  loki-config.yaml  main.py  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements.txt  requirements_base.txt  requirements_new.txt  test_migration.py  test_migration2.py  trigger.cicd
alembic/: env.py
alembic/versions/: 00b73b2e1010_add_glass_scan_url_v1_1_9.py  011fe341a511_add_patient_clinic_status_v1_0_0_43.py  02a8cefd38d4_update_doctor_status_test_v1_0_0_27.py  03adb0968361_fix_user_models_v1_0_0_20.py  057d93d335dd_update_doctor_status_fix_v1_0_0_29.py  063cb9f9ee31_update_doctor_models_delete_.py  06effa04a3ff_add_case_reports_and_doctors_signups_v1_.py  071c61bdfd9a_add_biomaterial_date_and_case_close_.py  0795a77bf44c_make_timestamps_timezone_aware_v1_1_23.py  09b13b7119be_update_doctor_and_documents_models_v1_0_.py  0acd5a1b4a9e_update_device_models_v1_0_0_22.py  0afcb3cae59b_fix_case_owner_column_v1_0_7.py  152eb2e2f061_last_password_change.py  15d6aa4a9e45_add_soc_v1_1_6.py  162691655122_fix_create_date_to_patient_v1_0_0_11.py  1b3b51eb648d_test_migration_for_prod_v1_0_1.py  1c9da8339f0e_fix_doctor_documents_model_v1_0_0_6.py  2147cd801160_add_create_date_to_patient_v1_0_0_10.py  256d042dee23_add_referral_other_study_type_v1_1_8.py  2680e0d4b6d4_add_energy_manager_table_v1_0_0_44.py  28a3a23353f5_update_doctor_diagnosis_table_v1_0_5.py  2ad78f6b3c51_fix_favotite_flag.py  2e2be028f1e8_add_glass_count_to_cassette_v1_0_0_17.py  303b76e9e2f9_add_energetic_objects_and_relations_.py  3494ffbd8c8b_updat_ophthalmologicalprescription_.py  37567c675f11_add_is_printed_for_sample_and_case_v1_0_.py  398070ad6677_add_medicines_and_firstaid_kit_tables_.py  3bccc3564955_initial_migration_for_prod_v1_0_0.py  3cf73d91cbf4_add_lawyer_column_v1_0_2.py  3fac354260f0_update_doctorsignaturesession_table_v1_.py  (+71 more)
cor_pass/: schemas.py
scan_worker/: requirements_scan.txt  smbprotocol_worker.py
worker/: data_collector.py  db_operations.py  main.py  modbus_client.py  requirements_worker.txt  schedule_task.py  tasks.py  worker_manager.py
(+172 files in other folders)
