[tool.poetry]
name = "cor-pass"
version = "0.1.0"
description = ""
authors = ["ZhovtenkoA <zhowtenko.oleksiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
fastapi = "^0.111.0"
fastapi-limiter = "^0.1.6"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
fastapi-mail = "^1.4.1"
pydantic-core = "^2.20.1"
httpx = "^0.27.0"
pycryptodome = "^3.20.0"
black = "^24.4.2"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
qrcode = "^7.4.2"
pillow = "^10.4.0"
cryptography = "^43.0.0"
pyotp = "^2.9.0"
requests = "^2.32.3"
prometheus-client = "^0.21.0"
loguru = "^0.7.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
redis = "^5.2.0"
pydicom = "^3.0.1"
asyncpg = "^0.30.0"
numpy = "^2.2.5"
scikit-image = "^0.25.2"
openslide-python = "^1.4.2"
openslide-bin = "^4.0.0.8"
ip2location = "^8.10.5"
pip = "^25.1.1"
pymodbus = "^3.9.2"
prometheus-fastapi-instrumentator = "^7.1.0"
gdcm = "^1.1"
pylibjpeg = "^2.0.1"
pylibjpeg-libjpeg = "^2.3.0"
pylibjpeg-openjpeg = "^2.4.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
